--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
